доработка interviews, обработка бага с orval-swagger генерацией, обновление скрипта vite-plugin-chrome-monitor.ts,
